# rag_prototype

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile.rag  legacy_main.py  main.py  main_v1.py  pyproject.toml  requirements.txt  test_main.py
src/: config.py  main.py
src/embedding/: __init__.py  embedder.py  vectorestore_dict.py  vectorstore_handler.py
src/loader/: loader.py
src/preprocessing/: __init__.py  metadata_manager.py  metadata_manager_v1.py  new_metadata_manager.py  new_preprocessor.py  preprocessor.py  preprocessor_v1.py  splitter.py
src/query/: llm_intergration.py  query.py  retriever.py
src/ui/: streamlit_ui.py
src/watcher/: directory_watcher.py
test_utils/: __init__.py  check_vector_data.py
test_utils/vectorstore/: chroma.sqlite3
utils/: __init__.py  file_manager.py  ocr.py
