[tool.poetry]
name = "rag-protoype"
version = "0.1.0"
description = ""
authors = ["standbyme227 <standbyme227@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"
openai = "^1.54.5"
chromadb = "^0.5.20"
pypdf = "^5.1.0"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
